--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -177,23 +177,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "32624f4c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "512"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "par['rnn_neurons']"
+    "from collections import OrderedDict\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "layers = OrderedDict()\n",
+    "n_cnn = 2\n",
+    "n_rnn = 2\n",
+    "n_dnn = 4\n",
+    "for i in range(n_cnn):\n",
+    "    layers[f\"cnn_block_{i+1}\"] = nn.ReLU()\n",
+    "for i in range(n_rnn):\n",
+    "    layers[f\"rnn_block_{i+1}\"] = nn.ReLU()\n",
+    "for i in range(n_dnn):\n",
+    "    layers[f\"dnn_block_{i+1}\"] = nn.ReLU()\n",
+    "model = nn.Sequential(layers)\n",
+    "\n"
    ]
   }
  ],
