agregado de longitudes en collate

--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vocab_file = 'data/label_encoder.txt'\n",
+    "vocab_file = 'data/label_encoder_new.txt'\n",
     "train_json = 'data/train.json'\n",
     "test_json = 'data/test.json'\n",
     "valid_json = 'data/dev.json'\n",
@@ -138,10 +138,16 @@
     "    sequences, labels = zip(*batch) # Esto devuelve: \n",
     "                                    # sequences = (dato1,dato2,...)\n",
     "                                    # labels = (label1,label2,...)\n",
-    "    #labels = [torch.tensor([ord(c) for c in label]) for label in labels]\n",
-    "    padded_sequences = pad_sequence(sequences, batch_first=True, padding_value=0)\n",
-    "    padded_labels = pad_sequence(labels, batch_first=True, padding_value= 100)\n",
-    "    return padded_sequences, padded_labels # Esta es la salida del dataloader\n",
+    "    #phn_tensors = [torch.tensor([ord(c) for c in label]) for label in labels]\n",
+    "\n",
+    "    wav_length = torch.tensor([w.shape[0] for w in sequences], dtype=torch.long)\n",
+    "    phn_length = torch.tensor([p.shape[0] for p in labels], dtype=torch.long)\n",
+    "    \n",
+    "    wav_length = wav_length.float() / torch.max(wav_length.float()) \n",
+    "    phn_length = phn_length.float() / torch.max(phn_length.float()) \n",
+    "    padded_wav = pad_sequence(sequences, batch_first=True, padding_value=0)\n",
+    "    padded_phn = pad_sequence(labels, batch_first=True, padding_value= -1)\n",
+    "    return (padded_wav, wav_length), (padded_phn, phn_length) # Esta es la salida del dataloader\n",
     "\n",
     "train_ds = TimitDataset(train_json,vocab_file)\n",
     "test_ds = TimitDataset(test_json,vocab_file)\n",
@@ -156,34 +162,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "2370a4f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in train_dl:\n",
-    "    y = x"
+    "for x,y in train_dl:\n",
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "3fce14ef",
+   "execution_count": 4,
+   "id": "dc64f380",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([8, 63488])"
+       "tensor([0.8040, 0.4591, 0.9305, 0.5310, 0.7010, 0.5955, 0.5186, 1.0000])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y[0].shape"
+    "x[1]"
    ]
   },
   {
