implementacion del cnn block en ctc.ipynb

--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
@@ -27,8 +27,10 @@
     "import torch\n",
     "import torch.utils.data as data\n",
     "import torchaudio\n",
+    "import torch.nn as nn\n",
     "import torchaudio.transforms as F\n",
     "from torch.nn.utils.rnn import pad_sequence\n",
+    "from collections import OrderedDict\n",
     "from torch.utils.data import  Dataset, DataLoader\n",
     "from torchaudio.models.decoder import ctc_decoder # vamos a hacer un decoder greedy, por razones \n",
     "                                                  # didácticas, este se usaría si quisiera\n",
@@ -161,38 +163,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "2370a4f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for x,y in train_dl:\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "dc64f380",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.8040, 0.4591, 0.9305, 0.5310, 0.7010, 0.5955, 0.5186, 1.0000])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x[1]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "04b7d974",
    "metadata": {},
@@ -211,6 +181,54 @@
     "par = {'sample_rate': 16000, 'n_fft': 400, 'n_mels': 40, 'lr': 0.1, 'dropout': 0.15, 'cnn_channels': (128,256),\n",
     "        'cnn_kernelsize': (3,3), 'rnn_layers': 4, 'rnn_neurons': 512, 'dnn_blocks':2, 'dnn_neurons':512}\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f0f6cf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bloque cnn similar al de speechbrain: conv1d-->layer normalization-->Leaky Relu-->Pooling-->drop-out\n",
+    "\n",
+    "# Modulo transpose para usarlo como una capa cualquiera\n",
+    "class Transpose(nn.Module):\n",
+    "    def __init__(self, dim0: int, dim1: int):\n",
+    "        super().__init__()\n",
+    "        self.dim0 = dim0\n",
+    "        self.dim1 = dim1\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
+    "        return x.transpose(self.dim0, self.dim1)\n",
+    "    \n",
+    "class CNN_block(nn.Module):\n",
+    "    def __init__(self, n_mels: int, n_channels: int, kernel_size: int, pool_kernel_size: int, do_prob: float = 0.0):\n",
+    "        super().__init__()\n",
+    "        layers = []\n",
+    "        layers.append( nn.Conv1d(in_channels=n_mels, out_channels=n_channels, kernel_size=kernel_size, stride=1, \n",
+    "                      padding=\"same\", padding_mode= \"replicate\") )\n",
+    "        layers.append(Transpose(1,2))\n",
+    "        layers.append(nn.LayerNorm(n_channels))\n",
+    "        layers.append(Transpose(1,2))\n",
+    "        layers.append(nn.LeakyReLU())\n",
+    "        layers.append(nn.MaxPool1d(kernel_size=pool_kernel_size, stride=1))\n",
+    "        layers.append(nn.Dropout(p=do_prob))\n",
+    "        self.bloque_cnn = nn.Sequential(*layers)\n",
+    "        self.pool_kernel_size = pool_kernel_size\n",
+    "    \n",
+    "    def forward(self, x: torch.Tensor, lengths: torch.Tensor):\n",
+    "        x = self.bloque_cnn(x)\n",
+    "\n",
+    "        # Create a boolean mask: True for valid data, False for padding\n",
+    "        new_lengths = lengths - self.pool_kernel_size + 1\n",
+    "        output_max_len = x.size(2)\n",
+    "        mask = torch.arange(output_max_len).unsqueeze(0) < new_lengths.unsqueeze(1)\n",
+    "        mask = mask.unsqueeze(1) \n",
+    "        x_masked = x * mask\n",
+    "\n",
+    "        return x_masked, new_lengths\n",
+    "\n"
    ]
   },
   {
