--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ccc0ee22",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3e07da27",
    "metadata": {},
    "outputs": [],
@@ -185,12 +185,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0f0f6cf1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bloque cnn similar al de speechbrain: conv1d-->layer normalization-->Leaky Relu-->Pooling-->drop-out\n",
+    "# Bloque cnn similar al de speechbrain: \n",
+    "# conv1d-->layer normalization-->Leaky Relu-->Pooling-->drop-out\n",
     "\n",
     "# Modulo transpose para usarlo como una capa cualquiera\n",
     "class Transpose(nn.Module):\n",
@@ -203,7 +204,8 @@
     "        return x.transpose(self.dim0, self.dim1)\n",
     "    \n",
     "class CNN_block(nn.Module):\n",
-    "    def __init__(self, n_mels: int, n_channels: int, kernel_size: int, pool_kernel_size: int, do_prob: float = 0.0):\n",
+    "    def __init__(self, n_mels: int, n_channels: int, kernel_size: int, \n",
+    "                    pool_kernel_size: int, do_prob: float = 0.0):\n",
     "        super().__init__()\n",
     "        layers = []\n",
     "        layers.append( nn.Conv1d(in_channels=n_mels, out_channels=n_channels, kernel_size=kernel_size, stride=1, \n",
@@ -233,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "32624f4c",
    "metadata": {},
    "outputs": [],
@@ -254,6 +256,17 @@
     "model = nn.Sequential(layers)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7168699a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "capas = []\n",
+    "for i in range(n_cnn):"
+   ]
   }
  ],
  "metadata": {
@@ -272,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
