--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ccc0ee22",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3e07da27",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0f0f6cf1",
    "metadata": {},
    "outputs": [],
@@ -207,9 +207,10 @@
     "    def __init__(self, n_mels: int, n_channels: int, kernel_size: int, \n",
     "                    pool_kernel_size: int, do_prob: float = 0.0):\n",
     "        super().__init__()\n",
+    "        pad_amount = (kernel_size - 1) // 2\n",
     "        layers = []\n",
     "        layers.append( nn.Conv1d(in_channels=n_mels, out_channels=n_channels, kernel_size=kernel_size, stride=1, \n",
-    "                      padding=\"same\", padding_mode= \"replicate\") )\n",
+    "                      padding=pad_amount, padding_mode= \"replicate\") )\n",
     "        layers.append(Transpose(1,2))\n",
     "        layers.append(nn.LayerNorm(n_channels))\n",
     "        layers.append(Transpose(1,2))\n",
@@ -223,11 +224,14 @@
     "        x = self.bloque_cnn(x)\n",
     "\n",
     "        # Create a boolean mask: True for valid data, False for padding\n",
-    "        new_lengths = lengths - self.pool_kernel_size + 1\n",
+    "        new_lengths = lengths.float() - self.pool_kernel_size + 1\n",
+    "        new_lengths = torch.max(new_lengths, torch.tensor(1.0, device=new_lengths.device))\n",
+    "        new_lengths = new_lengths.long()\n",
     "        output_max_len = x.size(2)\n",
     "        mask = torch.arange(output_max_len).unsqueeze(0) < new_lengths.unsqueeze(1)\n",
+    "        \n",
     "        mask = mask.unsqueeze(1) \n",
-    "        x_masked = x * mask\n",
+    "        x_masked = x * mask.float()\n",
     "\n",
     "        return x_masked, new_lengths\n",
     "\n"
@@ -235,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "32624f4c",
    "metadata": {},
    "outputs": [],
@@ -244,9 +248,8 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "layers = OrderedDict()\n",
-    "n_cnn = 2\n",
-    "n_rnn = 2\n",
-    "n_dnn = 4\n",
+    "\n",
+    "\n",
     "for i in range(n_cnn):\n",
     "    layers[f\"cnn_block_{i+1}\"] = nn.ReLU()\n",
     "for i in range(n_rnn):\n",
@@ -259,13 +262,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7168699a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 41\u001b[0m\n\u001b[1;32m     38\u001b[0m input_tensor \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrandn(\u001b[38;5;241m4\u001b[39m, n_mels, \u001b[38;5;241m100\u001b[39m)\n\u001b[1;32m     39\u001b[0m input_lengths \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m90\u001b[39m, \u001b[38;5;241m80\u001b[39m, \u001b[38;5;241m70\u001b[39m], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mlong)\n\u001b[0;32m---> 41\u001b[0m x, x_len \u001b[38;5;241m=\u001b[39m model_manual(input_tensor, input_lengths)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.12/site-packages/torch/nn/modules/module.py:1739\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1737\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1738\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1739\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.12/site-packages/torch/nn/modules/module.py:1750\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1745\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1746\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1747\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1748\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1749\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1750\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m forward_call(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   1752\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1753\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
+      "Cell \u001b[0;32mIn[14], line 18\u001b[0m, in \u001b[0;36mModel_CNN_RNN_DNN.forward\u001b[0;34m(self, x, lengths)\u001b[0m\n\u001b[1;32m     15\u001b[0m all_lengths \u001b[38;5;241m=\u001b[39m [lengths] \u001b[38;5;66;03m# Keep track of lengths after each block\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m block \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbloques:\n\u001b[0;32m---> 18\u001b[0m     x, lengths \u001b[38;5;241m=\u001b[39m block(x, lengths) \u001b[38;5;66;03m# Pass both x and lengths, get both back\u001b[39;00m\n\u001b[1;32m     19\u001b[0m     all_lengths\u001b[38;5;241m.\u001b[39mappend(lengths) \u001b[38;5;66;03m# Store intermediate lengths if needed\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m x, all_lengths\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
+     ]
+    }
+   ],
    "source": [
-    "capas = []\n",
-    "for i in range(n_cnn):"
+    "# Definición del modelo\n",
+    "class Model_CNN_RNN_DNN(nn.Module):\n",
+    "    def __init__(self, n_mels, n_channels_list, kernel_sizes, pool_kernel_sizes, do_probs):\n",
+    "        super().__init__()\n",
+    "        in_0 = n_mels\n",
+    "        self.bloques = nn.ModuleDict()\n",
+    "        for i, (n_ch, k_size, p_k_size, d_prob) in enumerate(zip(n_channels_list, kernel_sizes, \n",
+    "                                                                 pool_kernel_sizes, do_probs)):\n",
+    "            block = CNN_block(n_mels=in_0,n_channels=n_ch, kernel_size=k_size,\n",
+    "                              pool_kernel_size=p_k_size, do_prob=d_prob)\n",
+    "            self.bloques[f\"cnn_block_{i+1}\"] = block\n",
+    "            in_0 = n_ch # Output channels of this block become input for next\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor, lengths: torch.Tensor):\n",
+    "        all_lengths = [lengths] # Keep track of lengths after each block\n",
+    "\n",
+    "        for block in self.bloques:\n",
+    "            x, lengths = block(x, lengths) # Pass both x and lengths, get both back\n",
+    "            all_lengths.append(lengths) # Store intermediate lengths if needed\n",
+    "\n",
+    "        return x, all_lengths\n",
+    "    \n",
+    "n_mels = 80\n",
+    "num_blocks = 3\n",
+    "n_channels_per_block = [64, 128, 256]\n",
+    "kernel_sizes_per_block = [3, 5, 3] # Must be odd\n",
+    "pool_kernel_sizes_per_block = [2, 2, 2] # Stride 1 for pooling, so length reduces by (kernel-1)\n",
+    "do_probs_per_block = [0.1, 0.2, 0.0]   \n",
+    "\n",
+    "model_manual = Model_CNN_RNN_DNN(\n",
+    "    n_mels=n_mels,\n",
+    "    n_channels_list=n_channels_per_block,\n",
+    "    kernel_sizes=kernel_sizes_per_block,\n",
+    "    pool_kernel_sizes=pool_kernel_sizes_per_block,\n",
+    "    do_probs=do_probs_per_block\n",
+    ")     \n",
+    "\n",
+    "input_tensor = torch.randn(4, n_mels, 100)\n",
+    "input_lengths = torch.tensor([100, 90, 80, 70], dtype=torch.long)\n",
+    "\n",
+    "x, x_len = model_manual(input_tensor, input_lengths)"
    ]
   }
  ],
@@ -285,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
