bloque CNN completado

--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "ccc0ee22",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "3e07da27",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "0f0f6cf1",
    "metadata": {},
    "outputs": [],
@@ -204,15 +204,15 @@
     "        return x.transpose(self.dim0, self.dim1)\n",
     "    \n",
     "class CNN_block(nn.Module):\n",
-    "    def __init__(self, n_mels: int, n_channels: int, kernel_size: int, \n",
+    "    def __init__(self, n_mels: int, n_out: int, kernel_size: int, \n",
     "                    pool_kernel_size: int, do_prob: float = 0.0):\n",
     "        super().__init__()\n",
     "        pad_amount = (kernel_size - 1) // 2\n",
     "        layers = []\n",
-    "        layers.append( nn.Conv1d(in_channels=n_mels, out_channels=n_channels, kernel_size=kernel_size, stride=1, \n",
+    "        layers.append( nn.Conv1d(in_channels=n_mels, out_channels=n_out, kernel_size=kernel_size, stride=1, \n",
     "                      padding=pad_amount, padding_mode= \"replicate\") )\n",
     "        layers.append(Transpose(1,2))\n",
-    "        layers.append(nn.LayerNorm(n_channels))\n",
+    "        layers.append(nn.LayerNorm(n_out))\n",
     "        layers.append(Transpose(1,2))\n",
     "        layers.append(nn.LeakyReLU())\n",
     "        layers.append(nn.MaxPool1d(kernel_size=pool_kernel_size, stride=1))\n",
@@ -240,66 +240,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32624f4c",
+   "id": "7168699a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import OrderedDict\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "layers = OrderedDict()\n",
-    "\n",
-    "\n",
-    "for i in range(n_cnn):\n",
-    "    layers[f\"cnn_block_{i+1}\"] = nn.ReLU()\n",
-    "for i in range(n_rnn):\n",
-    "    layers[f\"rnn_block_{i+1}\"] = nn.ReLU()\n",
-    "for i in range(n_dnn):\n",
-    "    layers[f\"dnn_block_{i+1}\"] = nn.ReLU()\n",
-    "model = nn.Sequential(layers)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "7168699a",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'str' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 41\u001b[0m\n\u001b[1;32m     38\u001b[0m input_tensor \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrandn(\u001b[38;5;241m4\u001b[39m, n_mels, \u001b[38;5;241m100\u001b[39m)\n\u001b[1;32m     39\u001b[0m input_lengths \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m90\u001b[39m, \u001b[38;5;241m80\u001b[39m, \u001b[38;5;241m70\u001b[39m], dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mlong)\n\u001b[0;32m---> 41\u001b[0m x, x_len \u001b[38;5;241m=\u001b[39m model_manual(input_tensor, input_lengths)\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.12/site-packages/torch/nn/modules/module.py:1739\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1737\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1738\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1739\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.12/site-packages/torch/nn/modules/module.py:1750\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1745\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1746\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1747\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1748\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1749\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1750\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m forward_call(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m   1752\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1753\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
-      "Cell \u001b[0;32mIn[14], line 18\u001b[0m, in \u001b[0;36mModel_CNN_RNN_DNN.forward\u001b[0;34m(self, x, lengths)\u001b[0m\n\u001b[1;32m     15\u001b[0m all_lengths \u001b[38;5;241m=\u001b[39m [lengths] \u001b[38;5;66;03m# Keep track of lengths after each block\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m block \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbloques:\n\u001b[0;32m---> 18\u001b[0m     x, lengths \u001b[38;5;241m=\u001b[39m block(x, lengths) \u001b[38;5;66;03m# Pass both x and lengths, get both back\u001b[39;00m\n\u001b[1;32m     19\u001b[0m     all_lengths\u001b[38;5;241m.\u001b[39mappend(lengths) \u001b[38;5;66;03m# Store intermediate lengths if needed\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m x, all_lengths\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
-     ]
-    }
-   ],
-   "source": [
     "# Definición del modelo\n",
     "class Model_CNN_RNN_DNN(nn.Module):\n",
-    "    def __init__(self, n_mels, n_channels_list, kernel_sizes, pool_kernel_sizes, do_probs):\n",
+    "    def __init__(self, n_mels, n_out_list, kernel_sizes, pool_kernel_sizes, do_probs):\n",
     "        super().__init__()\n",
     "        in_0 = n_mels\n",
     "        self.bloques = nn.ModuleDict()\n",
-    "        for i, (n_ch, k_size, p_k_size, d_prob) in enumerate(zip(n_channels_list, kernel_sizes, \n",
+    "        # Bloques CNN_block\n",
+    "        for i, (n_out, k_size, p_k_size, d_prob) in enumerate(zip(n_out_list, kernel_sizes, \n",
     "                                                                 pool_kernel_sizes, do_probs)):\n",
-    "            block = CNN_block(n_mels=in_0,n_channels=n_ch, kernel_size=k_size,\n",
-    "                              pool_kernel_size=p_k_size, do_prob=d_prob)\n",
-    "            self.bloques[f\"cnn_block_{i+1}\"] = block\n",
-    "            in_0 = n_ch # Output channels of this block become input for next\n",
+    "            self.bloques[f\"cnn_block_{i+1}\"] = CNN_block(n_mels=in_0,n_out=n_out, \n",
+    "                                                        kernel_size=k_size,pool_kernel_size=p_k_size, \n",
+    "                                                        do_prob=d_prob)\n",
+    "            in_0 = n_out # Output channels of this block become input for next\n",
+    "        \n",
+    "        # Bloques RNN\n",
     "\n",
     "    def forward(self, x: torch.Tensor, lengths: torch.Tensor):\n",
     "        all_lengths = [lengths] # Keep track of lengths after each block\n",
     "\n",
     "        for block in self.bloques:\n",
-    "            x, lengths = block(x, lengths) # Pass both x and lengths, get both back\n",
+    "            x, lengths = self.bloques[block](x, lengths) # Pass both x and lengths, get both back\n",
     "            all_lengths.append(lengths) # Store intermediate lengths if needed\n",
     "\n",
     "        return x, all_lengths\n",
@@ -313,7 +278,7 @@
     "\n",
     "model_manual = Model_CNN_RNN_DNN(\n",
     "    n_mels=n_mels,\n",
-    "    n_channels_list=n_channels_per_block,\n",
+    "    n_out_list=n_channels_per_block,\n",
     "    kernel_sizes=kernel_sizes_per_block,\n",
     "    pool_kernel_sizes=pool_kernel_sizes_per_block,\n",
     "    do_probs=do_probs_per_block\n",
@@ -323,6 +288,37 @@
     "input_lengths = torch.tensor([100, 90, 80, 70], dtype=torch.long)\n",
     "\n",
     "x, x_len = model_manual(input_tensor, input_lengths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "28f79424",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CNN_block(\n",
+       "  (bloque_cnn): Sequential(\n",
+       "    (0): Conv1d(80, 64, kernel_size=(3,), stride=(1,), padding=(1,), padding_mode=replicate)\n",
+       "    (1): Transpose()\n",
+       "    (2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "    (3): Transpose()\n",
+       "    (4): LeakyReLU(negative_slope=0.01)\n",
+       "    (5): MaxPool1d(kernel_size=2, stride=1, padding=0, dilation=1, ceil_mode=False)\n",
+       "    (6): Dropout(p=0.1, inplace=False)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_manual.bloques[\"cnn_block_1\"]"
    ]
   }
  ],
@@ -342,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
