--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "dd43aba5",
    "metadata": {},
    "outputs": [
@@ -889,7 +889,21 @@
       "Archivos dummy creados para la demostración.\n",
       "\n",
       "Usando dispositivo: cuda\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cestien/anaconda3/lib/python3.12/site-packages/torch/nn/modules/rnn.py:123: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.15 and num_layers=1\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Estructura del Modelo CRDNN:\n",
       "CRDNNModel(\n",
       "  (mel_transform): MelSpectrogram(\n",
@@ -937,20 +951,12 @@
       "--- Probando un batch a través del modelo ---\n",
       "Batch 1:\n",
       "  Input Waveforms Shape: torch.Size([2, 40000])\n",
-      "  Input Waveform Lengths (Original): tensor([12800, 40000], device='cuda:0')\n",
+      "  Input Waveform Lengths (Original): tensor([40000, 32000], device='cuda:0')\n",
       "  Logits Shape (salida del modelo): torch.Size([2, 246, 40])\n",
-      "  Output Lengths (después de Mel, CNNs y RNNs): tensor([ 76, 246], device='cuda:0')\n",
+      "  Output Lengths (después de Mel, CNNs y RNNs): tensor([246, 196], device='cuda:0')\n",
       "------------------------------\n",
       "\n",
       "¡Modelo CRDNN integrado y probado con éxito!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.12/site-packages/torch/nn/modules/rnn.py:123: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.15 and num_layers=1\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
@@ -1526,7 +1532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
