--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "ccc0ee22",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "3e07da27",
    "metadata": {},
    "outputs": [],
@@ -185,14 +185,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "0f0f6cf1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Bloque cnn similar al de speechbrain: \n",
     "# conv1d-->layer normalization-->Leaky Relu-->Pooling-->drop-out\n",
-    "\n",
     "# Modulo transpose para usarlo como una capa cualquiera\n",
     "class Transpose(nn.Module):\n",
     "    def __init__(self, dim0: int, dim1: int):\n",
@@ -245,20 +244,55 @@
    "outputs": [],
    "source": [
     "# Definición del modelo\n",
+    "# input_size: n_mels\n",
+    "# dropout: !ref <dropout>\n",
+    "cnn_blocks: !ref <cnn_blocks>\n",
+    "cnn_channels: !ref <cnn_channels>\n",
+    "cnn_kernelsize: !ref <cnn_kernelsize>\n",
+    "rnn_layers: !ref <rnn_layers>\n",
+    "rnn_neurons: !ref <rnn_neurons>\n",
+    "dnn_blocks: !ref <dnn_blocks>\n",
+    "dnn_neurons: !ref <dnn_neurons>\n",
+    "dropout: 0.15\n",
+    "cnn_blocks: 2\n",
+    "cnn_channels: (128, 256)\n",
+    "cnn_kernelsize: (3, 3)\n",
+    "rnn_layers: 4\n",
+    "rnn_neurons: 512\n",
+    "rnn_bidirectional: True\n",
+    "dnn_blocks: 2\n",
+    "dnn_neurons: 512\n",
     "class Model_CNN_RNN_DNN(nn.Module):\n",
     "    def __init__(self, n_mels, n_out_list, kernel_sizes, pool_kernel_sizes, do_probs):\n",
     "        super().__init__()\n",
     "        in_0 = n_mels\n",
-    "        self.bloques = nn.ModuleDict()\n",
-    "        # Bloques CNN_block\n",
+    "        self.cnn_bloques = nn.ModuleDict()\n",
+    "        # Bloques CNN_block. Se implementan con CNN_block\n",
     "        for i, (n_out, k_size, p_k_size, d_prob) in enumerate(zip(n_out_list, kernel_sizes, \n",
     "                                                                 pool_kernel_sizes, do_probs)):\n",
-    "            self.bloques[f\"cnn_block_{i+1}\"] = CNN_block(n_mels=in_0,n_out=n_out, \n",
+    "            self.cnn_bloques[f\"cnn_block_{i+1}\"] = CNN_block(n_mels=in_0,n_out=n_out, \n",
     "                                                        kernel_size=k_size,pool_kernel_size=p_k_size, \n",
     "                                                        do_prob=d_prob)\n",
     "            in_0 = n_out # Output channels of this block become input for next\n",
     "        \n",
-    "        # Bloques RNN\n",
+    "        # Bloques RNN. Se implementan con GRU\n",
+    "        self.n_rnn_layers = n_rnn_layers\n",
+    "        self.rnn_bloques = nn.ModuleList()\n",
+    "        current_rnn_input_size = rnn_input_size\n",
+    "        \n",
+    "        for i in range(n_rnn_layers):\n",
+    "            rnn_modules.append(\n",
+    "                nn.GRU(\n",
+    "                    input_size=current_rnn_input_size,\n",
+    "                    hidden_size=rnn_hidden_size,\n",
+    "                    num_layers=1, # Cada GRU en la lista es una sola capa\n",
+    "                    batch_first=True,\n",
+    "                    bidirectional=rnn_bidirectional,\n",
+    "                    dropout=rnn_dropout if i < n_rnn_layers - 1 else 0 \n",
+    "                )\n",
+    "            )\n",
+    "            current_rnn_input_size = rnn_hidden_size * 2 if rnn_bidirectional else rnn_hidden_size\n",
+    "        self.rnn_blocks = rnn_modules\n",
     "\n",
     "    def forward(self, x: torch.Tensor, lengths: torch.Tensor):\n",
     "        all_lengths = [lengths] # Keep track of lengths after each block\n",
@@ -266,6 +300,7 @@
     "        for block in self.bloques:\n",
     "            x, lengths = self.bloques[block](x, lengths) # Pass both x and lengths, get both back\n",
     "            all_lengths.append(lengths) # Store intermediate lengths if needed\n",
+    "        \n",
     "\n",
     "        return x, all_lengths\n",
     "    \n",
@@ -292,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "28f79424",
    "metadata": {},
    "outputs": [
@@ -312,7 +347,7 @@
        ")"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
